--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="assets/css/style.css">
+	<title>My project</title>
 </head>
 <body>
 	<h1>Hello World</h1>
+	<h2>hello again</h2>
 	
 </body>
 </html>
